--- a/examples/performance/config.json
+++ b/examples/performance/config.json
@@ -14,6 +14,10 @@
       "experiment_aggregation" : "none",
       "sample_interval": 1000
     },
+    "Garbagecollection": {
+      "subject_aggregation" : "default",
+      "experiment_aggregation" : "none"
+    },
     "Android": {
       "subject_aggregation": "none",
       "experiment_aggregation" : "none",
