Updated the Plugin examples section of the README so it includes the GC and frametimes Plugins together with a brief description of the methods used in each of them

--- a/examples/performance/config.json
+++ b/examples/performance/config.json
@@ -11,12 +11,10 @@
   "profilers": {
     "Frametimes": {
       "subject_aggregation" : "default",
-      "experiment_aggregation" : "none",
       "sample_interval": 1000
     },
     "Garbagecollection": {
-      "subject_aggregation" : "default",
-      "experiment_aggregation" : "none"
+      "subject_aggregation" : "default"
     },
     "Android": {
       "subject_aggregation": "none",
