--- a/examples/native/config.json
+++ b/examples/native/config.json
@@ -4,7 +4,7 @@
     "j7duo2": {}
   },
   "duration": 5000,
-  "replications": 1,
+  "repetitions": 1,
   "duration": 5000,
   "apps": [
     "com.samsung.android.messaging"
