Randomization should be boolean, not string

--- a/examples/web/config.json
+++ b/examples/web/config.json
@@ -4,7 +4,7 @@
     "j7duo2": {}
   },
   "repetitions": 1,
-  "randomization": "False",
+  "randomization": false,
   "browsers": ["firefox"],
   "paths": [
     "https://google.com/",
