--- a/examples/web/config_root_charging_disabled.json
+++ b/examples/web/config_root_charging_disabled.json
@@ -8,7 +8,7 @@
     }
    },
   "repetitions": 1,
-  "randomization": "False",
+  "randomization": false,
   "browsers": ["firefox"],
   "paths": [
     "https://google.com/",
