--- a/examples/web/config.json
+++ b/examples/web/config.json
@@ -5,22 +5,34 @@
   },
   "repetitions": 1,
   "randomization": false,
-  "browsers": ["firefox"],
+  "browsers": [
+    "firefox"
+  ],
   "paths": [
     "https://google.com/",
     "https://apple.com/",
     "https://wikipedia.com/"
   ],
-  "profilers":{
- "trepn": {
-      "sample_interval": 200,
-      "data_points": ["battery_remaining", "mem_usage", "battery_power"]
-     },
+  "profilers": {
+    "trepn": {
+      "preferences": {
+        "profiling_interval": 100,
+        "battery_power_source_selection": "Direct Power"
+      },
+      "data_points": [
+        "battery_remaining",
+        "mem_usage",
+        "battery_power"
+      ]
+    },
     "android": {
       "subject_aggregation": "none",
-      "experiment_aggregation" : "Scripts/aggregate_android.py",
+      "experiment_aggregation": "Scripts/aggregate_android.py",
       "sample_interval": 200,
-      "data_points": ["cpu", "mem"]
+      "data_points": [
+        "cpu",
+        "mem"
+      ]
     }
   },
   "scripts": {
