--- a/examples/android/config_web_root_charging_disabled.json
+++ b/examples/android/config_web_root_charging_disabled.json
@@ -1,7 +1,11 @@
 {
   "type": "web",
   "devices": {
-    "j7duo2": {}
+    "nexus5x": {
+      "root_disable_charging": "True",
+      "charging_disabled_value": 0,
+      "usb_charging_disabled_file": "sys/class/power_supply/battery/charging_enabled"
+    }
   },
   "repetitions": 1,
   "randomization": false,
@@ -14,21 +18,10 @@
     "https://wikipedia.com/"
   ],
   "profilers": {
-    "trepn": {
-      "preferences": {
-        "profiling_interval": 100,
-        "battery_power_source_selection": "Direct Power"
-      },
-      "data_points": [
-        "battery_remaining",
-        "mem_usage",
-        "battery_power"
-      ]
-    },
     "android": {
       "subject_aggregation": "none",
       "experiment_aggregation": "Scripts/aggregate_android.py",
-      "sample_interval": 200,
+      "sample_interval": 100,
       "data_points": [
         "cpu",
         "mem"
