--- a/examples/trepn/config.json
+++ b/examples/trepn/config.json
@@ -10,6 +10,8 @@
   ],
   "profilers": {
     "trepn": {
+      "subject_aggregation": "default",
+      "experiment_aggregation": "Scripts/aggregate_trepn.py",
       "preferences": {
         "profiling_interval": 100,
         "battery_power_source_selection": "Direct Power"
