--- a/examples/trepn/config_web_root_charging_disabled.json
+++ b/examples/trepn/config_web_root_charging_disabled.json
@@ -1,30 +1,35 @@
 {
   "type": "web",
   "devices": {
-	"nexus5x": {
-        "root_disable_charging": "True",
-        "charging_disabled_value": 0,
-        "usb_charging_disabled_file": "sys/class/power_supply/battery/charging_enabled"
+    "nexus5x": {
+      "root_disable_charging": "True",
+      "charging_disabled_value": 0,
+      "usb_charging_disabled_file": "sys/class/power_supply/battery/charging_enabled"
     }
-   },
+  },
   "repetitions": 1,
   "randomization": false,
-  "browsers": ["firefox"],
+  "browsers": [
+    "firefox"
+  ],
   "paths": [
     "https://google.com/",
     "https://apple.com/",
     "https://wikipedia.com/"
   ],
-  "profilers":{
- "trepn": {
-      "sample_interval": 200,
-      "data_points": ["battery_temp", "mem_usage", "battery_power"]
-     },
-    "android": {
-      "subject_aggregation": "none",
-      "experiment_aggregation" : "Scripts/aggregate_android.py",
-      "sample_interval": 200,
-      "data_points": ["cpu", "mem"]
+  "profilers": {
+    "trepn": {
+      "subject_aggregation": "default",
+      "experiment_aggregation": "Scripts/aggregate_trepn.py",
+      "preferences": {
+        "profiling_interval": 100,
+        "battery_power_source_selection": "Direct Power"
+      },
+      "data_points": [
+        "battery_temp",
+        "mem_usage",
+        "battery_power"
+      ]
     }
   },
   "scripts": {
