Added nexus 6p configuration

--- a/android_runner/CriticalCSSExperiment/config_chrome.json
+++ b/android_runner/CriticalCSSExperiment/config_chrome.json
@@ -1,7 +1,7 @@
 {
     "type": "web",
     "devices": {
-      "samsungj3": {}
+      "nexus6p": {}
     },
     "repetitions": 10,
     "clear_cache": true,
