--- a/android_runner/CriticalCSSExperiment/config_chrome.json
+++ b/android_runner/CriticalCSSExperiment/config_chrome.json
@@ -1,42 +1,42 @@
 {
-    "type": "web",
-    "devices": {
-      "nexus6p": {}
-    },
-    "repetitions": 10,
-    "clear_cache": true,
-    "randomization": true,
-    "browsers": [
-      "chrome"
-    ],
-    "paths": [
-      "http://192.168.1.172:8000/Desktop/apps/adidasnmd.us/adidasnmd.us/"
-    ],
-    "profilers": {
-      "trepn": {
-       "preferences": {
-          "profiling_interval": 100,
-          "battery_power_source_selection": "Direct Power"
-        },
-        "data_points": [
-          "mem_usage",
-          "battery_power"
-        ]
+  "type": "web",
+  "devices": {
+    "nexus6p": {}
+  },
+  "repetitions": 10,
+  "clear_cache": true,
+  "randomization": true,
+  "browsers": [
+    "chrome"
+  ],
+  "paths": [
+    "/home/engel/UvA_VU/green-lab/critical_css_technique/selected_subjects/adidasnmd.us/adidasnmd.us/"
+  ],
+  "profilers": {
+    "trepn": {
+      "preferences": {
+        "profiling_interval": 100,
+        "battery_power_source_selection": "Direct Power"
       },
-      "android": {
-        "sample_interval": 100,
-        "data_points": ["cpu"]
-      }
+      "data_points": [
+        "mem_usage",
+        "battery_power"
+      ]
     },
-    "scripts": {
-      "before_experiment": "Scripts/before_experiment.py",
-      "before_run": "Scripts/before_run.py",
-      "after_launch": "Scripts/after_launch.py",
-      "interaction": "Scripts/interaction.py",
-      "before_close": "Scripts/before_close.py",
-      "after_run": "Scripts/after_run.py",
-      "after_experiment": "Scripts/after_experiment.py"
-    },
-    "time_between_run": 120000
-  }
+    "android": {
+      "sample_interval": 100,
+      "data_points": ["cpu"]
+    }
+  },
+  "scripts": {
+    "before_experiment": "Scripts/before_experiment.py",
+    "before_run": "Scripts/before_run.py",
+    "after_launch": "Scripts/after_launch.py",
+    "interaction": "Scripts/interaction.py",
+    "before_close": "Scripts/before_close.py",
+    "after_run": "Scripts/after_run.py",
+    "after_experiment": "Scripts/after_experiment.py"
+  },
+  "time_between_run": 120000
+}
   
