update gitignore for repositioned node_modules
Former-commit-id: c25a186bfa0c41037fdd9afea3cb185feee90c72

--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,4 @@ AndroidRunner/Plugins/monsoon/script/monsoon_config.csv
 output/
 
 # ignore node_modules folder used by npm
-critical_css_technique/node_modules/
-
-node_modules/puppeteer/.local-chromium/linux-722234/chrome-linux/chrome
+node_modules/
