--- a/android_runner/CriticalCSSExperiment/config_firefox.json
+++ b/android_runner/CriticalCSSExperiment/config_firefox.json
@@ -10,7 +10,56 @@
       "firefox"
     ],
     "paths": [
-      "http://192.168.1.172:8000/Desktop/apps/adidasnmd.us/adidasnmd.us/"
+      "subjects/adidasnmd.us/adidasnmd.us/",
+      "subjects_critical/adidasnmd.us/adidasnmd.us/",
+      "subjects/adriaticbasket.info/adriaticbasket.info/",
+      "subjects_critical/adriaticbasket.info/adriaticbasket.info/",
+      "subjects/ammar.cloud/ammar.cloud/",
+      "subjects_critical/ammar.cloud/ammar.cloud/",
+      "subjects/cbdvapejuice.net/cbdvapejuice.net/",
+      "subjects_critical/cbdvapejuice.net/cbdvapejuice.net/",
+      "subjects/compresse-per-articolazioni.eu/compresse-per-articolazioni.eu/",
+      "subjects_critical/compresse-per-articolazioni.eu/compresse-per-articolazioni.eu/",
+      "subjects/cottagelife.com/cottagelife.com/",
+      "subjects_critical/cottagelife.com/cottagelife.com/",
+      "subjects/fusion.org/fusion.org/",
+      "subjects_critical/fusion.org/fusion.org/",
+      "subjects/gildedserpent.com/gildedserpent.com/",
+      "subjects_critical/gildedserpent.com/gildedserpent.com/",
+      "subjects/greasyfork.org/greasyfork.org/",
+      "subjects_critical/greasyfork.org/greasyfork.org/",
+      "subjects/greentechmedia.com/greentechmedia.com/",
+      "subjects_critical/greentechmedia.com/greentechmedia.com/",
+      "subjects/hagley.org/hagley.org/",
+      "subjects_critical/hagley.org/hagley.org/",
+      "subjects/hcss.com/hcss.com/",
+      "subjects_critical/hcss.com/hcss.com/",
+      "subjects/holifestival.org/holifestival.org/",
+      "subjects_critical/holifestival.org/holifestival.org/",
+      "subjects/iflyer.js/iflyer.js/",
+      "subjects_critical/iflyer.js/iflyer.js/",
+      "subjects/iliketubes.com/iliketubes.com/",
+      "subjects_critical/iliketubes.com/iliketubes.com/",
+      "subjects/kenengba.com/kenengba.com/",
+      "subjects_critical/kenengba.com/kenengba.com/",
+      "subjects/legalaidnc.org/legalaidnc.org/",
+      "subjects_critical/legalaidnc.org/legalaidnc.org/",
+      "subjects/lekhafoods.com/lekhafoods.com/",
+      "subjects_critical/lekhafoods.com/lekhafoods.com/",
+      "subjects/mrob.com/mrob.com/",
+      "subjects_critical/mrob.com/mrob.com/",
+      "subjects/quechua.co.uk/quechua.co.uk/",
+      "subjects_critical/quechua.co.uk/quechua.co.uk/",
+      "subjects/sciencebeta.com/sciencebeta.com/",
+      "subjects_critical/sciencebeta.com/sciencebeta.com/",
+      "subjects/sportravel.es/sportravel.es/",
+      "subjects_critical/sportravel.es/sportravel.es/",
+      "subjects/telfer.ru/telfer.ru/",
+      "subjects_critical/telfer.ru/telfer.ru/",
+      "subjects/ubersocial.com/ubersocial.com/",
+      "subjects_critical/ubersocial.com/ubersocial.com/",
+      "subjects/velovita.com/velovita.com/",
+      "subjects_critical/velovita.com/velovita.com/"
     ],
     "profilers": {
       "trepn": {
@@ -39,4 +88,3 @@
     },
     "time_between_run": 120000
   }
-  
