--- a/android_runner/CriticalCSSExperiment/config_chrome.json
+++ b/android_runner/CriticalCSSExperiment/config_chrome.json
@@ -61,15 +61,19 @@
     "subjects/zuver.net.au/zuver.net.au/",
     "subjects_critical/zuver.net.au/zuver.net.au/"
   ],
+  "powerprofile_path": "power_profile.xml",
+  "systrace_path": "platform_tools/systrace/systrace.py",
   "profilers": {
+    "batterystats": {
+      "cleanup": true,
+      "enable_systrace_parsing": false
+    },
     "trepn": {
       "preferences": {
-        "profiling_interval": 100,
-        "battery_power_source_selection": "Direct Power"
+        "profiling_interval": 100
       },
       "data_points": [
-        "mem_usage",
-        "battery_power"
+        "mem_usage"
       ]
     },
     "android": {
@@ -86,6 +90,6 @@
     "after_run": "Scripts/after_run.py",
     "after_experiment": "Scripts/after_experiment.py"
   },
-  "time_between_run": 120000
+  "time_between_run": 1200
 }
   
