--- a/android_runner/CriticalCSSExperiment/config_chrome.json
+++ b/android_runner/CriticalCSSExperiment/config_chrome.json
@@ -9,57 +9,58 @@
   "browsers": [
     "chrome"
   ],
+  "local_server_address": "http://192.168.2.55:8000",
   "paths": [
-    "subjects/alliedtelesis.com/alliedtelesis.com/",
-    "subjects_critical/alliedtelesis.com/alliedtelesis.com/",
-    "subjects/andreaswaelti.com/andreaswaelti.com/",
-    "subjects_critical/andreaswaelti.com/andreaswaelti.com/",
-    "subjects/astropix.com/astropix.com/",
-    "subjects_critical/astropix.com/astropix.com/",
-    "subjects/bdfor.com/bdfor.com/",
-    "subjects_critical/bdfor.com/bdfor.com/",
-    "subjects/coloradoboulevard.net/coloradoboulevard.net/",
-    "subjects_critical/coloradoboulevard.net/coloradoboulevard.net/",
-    "subjects/denverite.com/denverite.com/",
-    "subjects_critical/denverite.com/denverite.com/",
-    "subjects/drivenxdesign.com/drivenxdesign.com/",
-    "subjects_critical/drivenxdesign.com/drivenxdesign.com/",
-    "subjects/heinlein-support.de/heinlein-support.de/",
-    "subjects_critical/heinlein-support.de/heinlein-support.de/",
-    "subjects/japassie.com/japassie.com/",
-    "subjects_critical/japassie.com/japassie.com/",
-    "subjects/kasteelhoensbroek.nl/kasteelhoensbroek.nl/",
-    "subjects_critical/kasteelhoensbroek.nl/kasteelhoensbroek.nl/",
-    "subjects/kpoe.at/kpoe.at/",
-    "subjects_critical/kpoe.at/kpoe.at/",
-    "subjects/magnetadservices.com/magnetadservices.com/",
-    "subjects_critical/magnetadservices.com/magnetadservices.com/",
-    "subjects/marketlii.com/marketlii.com/",
-    "subjects_critical/marketlii.com/marketlii.com/",
-    "subjects/megatorrentshd.biz/megatorrentshd.biz/",
-    "subjects_critical/megatorrentshd.biz/megatorrentshd.biz/",
-    "subjects/nflpenalties.com/nflpenalties.com/",
-    "subjects_critical/nflpenalties.com/nflpenalties.com/",
-    "subjects/pieterhugo.com/pieterhugo.com/",
-    "subjects_critical/pieterhugo.com/pieterhugo.com/",
-    "subjects/porn5f.com/porn5f.com/",
-    "subjects_critical/porn5f.com/porn5f.com/",
-    "subjects/renesia.com/renesia.com/",
-    "subjects_critical/renesia.com/renesia.com/",
-    "subjects/Spansh.co.uk/Spansh.co.uk/",
-    "subjects_critical/Spansh.co.uk/Spansh.co.uk/",
-    "subjects/swimply.com/swimply.com/",
-    "subjects_critical/swimply.com/swimply.com/",
-    "subjects/vergecampus.com/vergecampus.com/",
-    "subjects_critical/vergecampus.com/vergecampus.com/",
-    "subjects/visit-sidney.com/visit-sidney.com/",
-    "subjects_critical/visit-sidney.com/visit-sidney.com/",
-    "subjects/worldlink.com.np/worldlink.com.np/",
-    "subjects_critical/worldlink.com.np/worldlink.com.np/",
-    "subjects/xobor.com/xobor.com/",
-    "subjects_critical/xobor.com/xobor.com/",
-    "subjects/zuver.net.au/zuver.net.au/",
-    "subjects_critical/zuver.net.au/zuver.net.au/"
+    "subjects/subjects_non_critical/alliedtelesis.com/alliedtelesis.com/",
+    "subjects/subjects_critical/alliedtelesis.com/alliedtelesis.com/",
+    "subjects/subjects_non_critical/andreaswaelti.com/andreaswaelti.com/",
+    "subjects/subjects_critical/andreaswaelti.com/andreaswaelti.com/",
+    "subjects/subjects_non_critical/astropix.com/astropix.com/",
+    "subjects/subjects_critical/astropix.com/astropix.com/",
+    "subjects/subjects_non_critical/bdfor.com/bdfor.com/",
+    "subjects/subjects_critical/bdfor.com/bdfor.com/",
+    "subjects/subjects_non_critical/coloradoboulevard.net/coloradoboulevard.net/",
+    "subjects/subjects_critical/coloradoboulevard.net/coloradoboulevard.net/",
+    "subjects/subjects_non_critical/denverite.com/denverite.com/",
+    "subjects/subjects_critical/denverite.com/denverite.com/",
+    "subjects/subjects_non_critical/drivenxdesign.com/drivenxdesign.com/",
+    "subjects/subjects_critical/drivenxdesign.com/drivenxdesign.com/",
+    "subjects/subjects_non_critical/heinlein-support.de/heinlein-support.de/",
+    "subjects/subjects_critical/heinlein-support.de/heinlein-support.de/",
+    "subjects/subjects_non_critical/japassie.com/japassie.com/",
+    "subjects/subjects_critical/japassie.com/japassie.com/",
+    "subjects/subjects_non_critical/kasteelhoensbroek.nl/kasteelhoensbroek.nl/",
+    "subjects/subjects_critical/kasteelhoensbroek.nl/kasteelhoensbroek.nl/",
+    "subjects/subjects_non_critical/kpoe.at/kpoe.at/",
+    "subjects/subjects_critical/kpoe.at/kpoe.at/",
+    "subjects/subjects_non_critical/magnetadservices.com/magnetadservices.com/",
+    "subjects/subjects_critical/magnetadservices.com/magnetadservices.com/",
+    "subjects/subjects_non_critical/marketlii.com/marketlii.com/",
+    "subjects/subjects_critical/marketlii.com/marketlii.com/",
+    "subjects/subjects_non_critical/megatorrentshd.biz/megatorrentshd.biz/",
+    "subjects/subjects_critical/megatorrentshd.biz/megatorrentshd.biz/",
+    "subjects/subjects_non_critical/nflpenalties.com/nflpenalties.com/",
+    "subjects/subjects_critical/nflpenalties.com/nflpenalties.com/",
+    "subjects/subjects_non_critical/pieterhugo.com/pieterhugo.com/",
+    "subjects/subjects_critical/pieterhugo.com/pieterhugo.com/",
+    "subjects/subjects_non_critical/porn5f.com/porn5f.com/",
+    "subjects/subjects_critical/porn5f.com/porn5f.com/",
+    "subjects/subjects_non_critical/renesia.com/renesia.com/",
+    "subjects/subjects_critical/renesia.com/renesia.com/",
+    "subjects/subjects_non_critical/Spansh.co.uk/Spansh.co.uk/",
+    "subjects/subjects_critical/Spansh.co.uk/Spansh.co.uk/",
+    "subjects/subjects_non_critical/swimply.com/swimply.com/",
+    "subjects/subjects_critical/swimply.com/swimply.com/",
+    "subjects/subjects_non_critical/vergecampus.com/vergecampus.com/",
+    "subjects/subjects_critical/vergecampus.com/vergecampus.com/",
+    "subjects/subjects_non_critical/visit-sidney.com/visit-sidney.com/",
+    "subjects/subjects_critical/visit-sidney.com/visit-sidney.com/",
+    "subjects/subjects_non_critical/worldlink.com.np/worldlink.com.np/",
+    "subjects/subjects_critical/worldlink.com.np/worldlink.com.np/",
+    "subjects/subjects_non_critical/xobor.com/xobor.com/",
+    "subjects/subjects_critical/xobor.com/xobor.com/",
+    "subjects/subjects_non_critical/zuver.net.au/zuver.net.au/",
+    "subjects/subjects_critical/zuver.net.au/zuver.net.au/"
   ],
   "powerprofile_path": "power_profile.xml",
   "systrace_path": "platform_tools/systrace/systrace.py",
