--- a/android_runner/CriticalCSSExperiment/config_firefox.json
+++ b/android_runner/CriticalCSSExperiment/config_firefox.json
@@ -9,57 +9,58 @@
   "browsers": [
     "firefox"
   ],
+  "local_server_address": "http://192.168.2.55:8000",
   "paths": [
-    "subjects/adidasnmd.us/adidasnmd.us/",
-    "subjects_critical/adidasnmd.us/adidasnmd.us/",
-    "subjects/adriaticbasket.info/adriaticbasket.info/",
-    "subjects_critical/adriaticbasket.info/adriaticbasket.info/",
-    "subjects/ammar.cloud/ammar.cloud/",
-    "subjects_critical/ammar.cloud/ammar.cloud/",
-    "subjects/cbdvapejuice.net/cbdvapejuice.net/",
-    "subjects_critical/cbdvapejuice.net/cbdvapejuice.net/",
-    "subjects/compresse-per-articolazioni.eu/compresse-per-articolazioni.eu/",
-    "subjects_critical/compresse-per-articolazioni.eu/compresse-per-articolazioni.eu/",
-    "subjects/cottagelife.com/cottagelife.com/",
-    "subjects_critical/cottagelife.com/cottagelife.com/",
-    "subjects/fusion.org/fusion.org/",
-    "subjects_critical/fusion.org/fusion.org/",
-    "subjects/gildedserpent.com/gildedserpent.com/",
-    "subjects_critical/gildedserpent.com/gildedserpent.com/",
-    "subjects/greasyfork.org/greasyfork.org/",
-    "subjects_critical/greasyfork.org/greasyfork.org/",
-    "subjects/greentechmedia.com/greentechmedia.com/",
-    "subjects_critical/greentechmedia.com/greentechmedia.com/",
-    "subjects/hagley.org/hagley.org/",
-    "subjects_critical/hagley.org/hagley.org/",
-    "subjects/hcss.com/hcss.com/",
-    "subjects_critical/hcss.com/hcss.com/",
-    "subjects/holifestival.org/holifestival.org/",
-    "subjects_critical/holifestival.org/holifestival.org/",
-    "subjects/iflyer.tv/iflyer.tv/",
-    "subjects_critical/iflyer.tv/iflyer.tv/",
-    "subjects/iliketubes.com/iliketubes.com/",
-    "subjects_critical/iliketubes.com/iliketubes.com/",
-    "subjects/kenengba.com/kenengba.com/",
-    "subjects_critical/kenengba.com/kenengba.com/",
-    "subjects/legalaidnc.org/legalaidnc.org/",
-    "subjects_critical/legalaidnc.org/legalaidnc.org/",
-    "subjects/lekhafoods.com/lekhafoods.com/",
-    "subjects_critical/lekhafoods.com/lekhafoods.com/",
-    "subjects/mrob.com/mrob.com/",
-    "subjects_critical/mrob.com/mrob.com/",
-    "subjects/quechua.co.uk/quechua.co.uk/",
-    "subjects_critical/quechua.co.uk/quechua.co.uk/",
-    "subjects/sciencebeta.com/sciencebeta.com/",
-    "subjects_critical/sciencebeta.com/sciencebeta.com/",
-    "subjects/sportravel.es/sportravel.es/",
-    "subjects_critical/sportravel.es/sportravel.es/",
-    "subjects/telfer.ru/telfer.ru/",
-    "subjects_critical/telfer.ru/telfer.ru/",
-    "subjects/ubersocial.com/ubersocial.com/",
-    "subjects_critical/ubersocial.com/ubersocial.com/",
-    "subjects/velovita.com/velovita.com/",
-    "subjects_critical/velovita.com/velovita.com/"
+    "subjects/subjects_non_critical/adidasnmd.us/adidasnmd.us/",
+    "subjects/subjects_critical/adidasnmd.us/adidasnmd.us/",
+    "subjects/subjects_non_critical/adriaticbasket.info/adriaticbasket.info/",
+    "subjects/subjects_critical/adriaticbasket.info/adriaticbasket.info/",
+    "subjects/subjects_non_critical/ammar.cloud/ammar.cloud/",
+    "subjects/subjects_critical/ammar.cloud/ammar.cloud/",
+    "subjects/subjects_non_critical/cbdvapejuice.net/cbdvapejuice.net/",
+    "subjects/subjects_critical/cbdvapejuice.net/cbdvapejuice.net/",
+    "subjects/subjects_non_critical/compresse-per-articolazioni.eu/compresse-per-articolazioni.eu/",
+    "subjects/subjects_critical/compresse-per-articolazioni.eu/compresse-per-articolazioni.eu/",
+    "subjects/subjects_non_critical/cottagelife.com/cottagelife.com/",
+    "subjects/subjects_critical/cottagelife.com/cottagelife.com/",
+    "subjects/subjects_non_critical/fusion.org/fusion.org/",
+    "subjects/subjects_critical/fusion.org/fusion.org/",
+    "subjects/subjects_non_critical/gildedserpent.com/gildedserpent.com/",
+    "subjects/subjects_critical/gildedserpent.com/gildedserpent.com/",
+    "subjects/subjects_non_critical/greasyfork.org/greasyfork.org/",
+    "subjects/subjects_critical/greasyfork.org/greasyfork.org/",
+    "subjects/subjects_non_critical/greentechmedia.com/greentechmedia.com/",
+    "subjects/subjects_critical/greentechmedia.com/greentechmedia.com/",
+    "subjects/subjects_non_critical/hagley.org/hagley.org/",
+    "subjects/subjects_critical/hagley.org/hagley.org/",
+    "subjects/subjects_non_critical/hcss.com/hcss.com/",
+    "subjects/subjects_critical/hcss.com/hcss.com/",
+    "subjects/subjects_non_critical/holifestival.org/holifestival.org/",
+    "subjects/subjects_critical/holifestival.org/holifestival.org/",
+    "subjects/subjects_non_critical/iflyer.tv/iflyer.tv/",
+    "subjects/subjects_critical/iflyer.tv/iflyer.tv/",
+    "subjects/subjects_non_critical/iliketubes.com/iliketubes.com/",
+    "subjects/subjects_critical/iliketubes.com/iliketubes.com/",
+    "subjects/subjects_non_critical/kenengba.com/kenengba.com/",
+    "subjects/subjects_critical/kenengba.com/kenengba.com/",
+    "subjects/subjects_non_critical/legalaidnc.org/legalaidnc.org/",
+    "subjects/subjects_critical/legalaidnc.org/legalaidnc.org/",
+    "subjects/subjects_non_critical/lekhafoods.com/lekhafoods.com/",
+    "subjects/subjects_critical/lekhafoods.com/lekhafoods.com/",
+    "subjects/subjects_non_critical/mrob.com/mrob.com/",
+    "subjects/subjects_critical/mrob.com/mrob.com/",
+    "subjects/subjects_non_critical/quechua.co.uk/quechua.co.uk/",
+    "subjects/subjects_critical/quechua.co.uk/quechua.co.uk/",
+    "subjects/subjects_non_critical/sciencebeta.com/sciencebeta.com/",
+    "subjects/subjects_critical/sciencebeta.com/sciencebeta.com/",
+    "subjects/subjects_non_critical/sportravel.es/sportravel.es/",
+    "subjects/subjects_critical/sportravel.es/sportravel.es/",
+    "subjects/subjects_non_critical/telfer.ru/telfer.ru/",
+    "subjects/subjects_critical/telfer.ru/telfer.ru/",
+    "subjects/subjects_non_critical/ubersocial.com/ubersocial.com/",
+    "subjects/subjects_critical/ubersocial.com/ubersocial.com/",
+    "subjects/subjects_non_critical/velovita.com/velovita.com/",
+    "subjects/subjects_critical/velovita.com/velovita.com/"
   ],
   "powerprofile_path": "power_profile.xml",
   "systrace_path": "platform_tools/systrace/systrace.py",
