--- a/critical_css_experiment/config_chrome.json
+++ b/critical_css_experiment/config_chrome.json
@@ -62,7 +62,7 @@
     "subjects/subjects_non_critical/zuver.net.au/zuver.net.au/",
     "subjects/subjects_critical/zuver.net.au/zuver.net.au/"
   ],
-  "powerprofile_path": "power_profile.xml",
+  "powerprofile_path": "critical_css_experiment/power_profile.xml",
   "systrace_path": "platform_tools/systrace/systrace.py",
   "profilers": {
     "batterystats": {
