--- a/critical_css_experiment/config_firefox.json
+++ b/critical_css_experiment/config_firefox.json
@@ -62,7 +62,7 @@
     "subjects/subjects_non_critical/velovita.com/velovita.com/",
     "subjects/subjects_critical/velovita.com/velovita.com/"
   ],
-  "powerprofile_path": "power_profile.xml",
+  "powerprofile_path": "critical_css_experimentpower_profile.xml",
   "systrace_path": "platform_tools/systrace/systrace.py",
   "profilers": {
     "batterystats": {
