Ignore web server pID

--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,5 @@ output/
 # ignore node_modules folder used by npm
 node_modules/
 
-# ignore versions of web apps with critical applied
-# to obtain these: run apply_critical script
-
+# ignore stored pID for the web server process
+proc_pid.pickle
